--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "slick-carousel": "^1.8.1",
-    "sqlite3": "^5.1.6",
-    "tailwindcss": "^3.4.4"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
