--- a/package.json
+++ b/package.json
@@ -35,13 +35,11 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "slick-carousel": "^1.8.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
     "eslint": "8.34.0",
-    "postcss": "^8.4.38",
-    "prisma": "^4.11.0",
-    "tailwindcss": "^3.4.4"
+    "prisma": "^4.11.0"
   }
 }
